chore(rebuild): remove `overflow` declaration on `.site` to fix sticky behavior

--- a/src/components/Site/Site.scss
+++ b/src/components/Site/Site.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  overflow: hidden;
 
   &__content {
     flex: 1 1 auto;
